tests/compile-fail/lexer/names/sigil.stderr
error: Invalid token
  ┌─ $DD/tests/compile-fail/lexer/names/sigil.sk:1:4
  │
1 │ fn @say() {}
  │    ^

